vlib/v/checker/tests/print_optional_type_err.vv
import os
fn main() {
	println(os.ls('.'))
}
